--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bulma": "^0.7.1",
+    "ejs": "^2.6.1",
     "eslint": "^5.3.0",
     "express": "^4.16.3",
     "method-override": "^3.0.0",
