--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
+    "db:init": "createdb moviesscape_db",
+    "db:reset:dev": "psql -d moviesscape_db -f ./db/schema.sql",
+    "db:seed:dev": "psql -d moviesscape_db -f ./db/seed.sql",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -17,13 +20,13 @@
     "express": "^4.16.3",
     "method-override": "^3.0.0",
     "morgan": "^1.9.0",
-    "nodemon": "^1.18.3",
     "pg-promise": "^8.4.5"
   },
   "devDependencies": {
     "eslint": "^5.4.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint-plugin-import": "^2.14.0",
+    "nodemon": "^1.18.3"
   },
   "description": ""
 }
